prevent iconTitle form being misaligned

--- a/src/assets/scss/iconitem.scss
+++ b/src/assets/scss/iconitem.scss
@@ -40,7 +40,7 @@ $borderRadiusBottom: 0 0 3% 3%;
   }
 
   .iconTitle {
-    margin-top: 10%;
+    margin-top: 0.7rem;
   }
 
   .card-text {
